--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <nav class="navbar">
 
     <div class="nav-links">
-      <a href="home-page.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
@@ -38,10 +38,10 @@
     <div class="header-icons">
       
       <ul>
-        <li><a href="#"> <i class="bx bxl-facebook"></i></a></li>
-        <li><a href="#"> <i class="bx bxl-whatsapp"></i></a></li>
+        <li><a href="https://facebook.com/victor.ay"> <i class="bx bxl-facebook"></i></a></li>
+        <li><a href="https://wa.me/2347073111588?text=Hello, I'm interested in your services!"> <i class="bx bxl-whatsapp"></i></a></li>
         <li><a href="#"> <i class="bx bxl-instagram"></i></a></li>
-        <li><a href="#"> <i class="bx bxl-twitter"></i></a></li>
+        <li><a href="https://youtube.com/c/V@Ayenivictor-td8il"> <i class="bx bxl-youtube"></i></a></li>
     </ul>
     
     </div>
