--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
   <nav class="navbar">
 
     <div class="nav-links">
-      <a href="home-page.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
