--- a/about.html
+++ b/about.html
@@ -70,7 +70,11 @@
     </div>
 
     <p class="info__text">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto sapiente ducimus eius distinctio et eligendi amet, nihil itaque deserunt porro sit nobis quae at. Ex asperiores totam adipisci exercitationem hic eos sint libero similique repudiandae cumque eum inventore consequuntur ipsa quaerat labore atque consequatur doloremque explicabo, soluta laboriosam possimus. Vitae?
+      Hi, I'm Victor A-y, a passionate and creative frontend developer. I specialize in building dynamic, user-friendly web applications with a focus on seamless design and functionality. With a strong foundation in HTML, CSS, JavaScript, and modern frontend frameworks, I am dedicated to creating engaging, responsive websites that deliver exceptional user experiences.
+
+I enjoy solving complex problems and translating them into intuitive, interactive designs. My goal is to continually improve my skills and stay updated with the latest web development trends and technologies.
+
+Feel free to browse my projects, and if you're interested in collaborating or have any questions, don't hesitate to get in touch!
     </p>
   </div>
 
